# ViennaPS-HBM

./: .gitignore  CASE_STUDY.md  CITATION.cff  CLAUDE.md  CONTEXT.md  DRY_ETCH_DOE.md  FOUNDATION_REAUDIT.md  HTML_PUBLICATION_AUDIT.md  JOINT_PROCESS_AUTORESEARCH.md  LICENSE  NUMERICAL_AUTORESEARCH_PRD.md  PRD.md  PRODUCT.md  README.md  RESEARCH_PLAN_V2.md  RESEARCH_PLAN_V3.md  TEST_GATE_AUDIT.md  TUTORIAL_PRD.md  active_experiment_contract.json  api_knob_audit.py  artifact-manifest.json  autoresearch_dry_etch.py  autoresearch_joint_process.py  bosch_grid_preflight.py  bosch_ray_current_grid_ladder.py  bosch_ray_phase_a.py  bosch_ray_phase_b.py  bosch_trajectory_replay.json  bosch_tutorial_data.json  build_active_experiment_contract.py  build_bosch_ray_current_grid_ladder_review.py  build_bosch_ray_phase_a_review.py  build_bosch_ray_phase_b_review.py  build_bosch_trajectory_replay.py  build_bosch_tutorial_data.py  build_candidate_cu_replay.py  build_cu_fill_animation.py  build_cu_fill_replay.py  build_explainer.py  build_explainer_data.py  (+207 more)
.githooks/: pre-push
archive/: README.md  SHA256SUMS
autoresearch_dry_etch/: gen_001_anchors.json  gen_001_results.jsonl  gen_002_plan.json  gen_002_summary.json  research_log.md
config/: process.toml  tutorial.toml
docs/: adaptive-etch-search.md  calibration.md  claude-codebase-review-prompt.md  code-map.md  code-review-2026-07-18.md  current-run.md  evidence-map.md  experiment-playbook.md  factor-registry.md  measurements.md  metric-study.md  model-limits.md  range-research-log.json  range-research.md  reproducibility.md  (+2 more)
(+353 files in other folders)
